--- a/Script/script.tex
+++ b/Script/script.tex
@@ -341,39 +341,36 @@
         \dialog[B0]{
             再看看呢，也没几个地方要检查了。\direction{拿起说明书}
         }
-        \dialog[B1]{
-            大不了把接线再检查一遍嘛。
-        }
         \dialog[AC]{
-            \direction{一脸厌倦、无奈} 何必呢。再得不到结果，也得先准备答辩去了。
+            \direction{一脸厌倦、无奈} 何必呢。就算得不到结果，也得先准备答辩去了。
         }
         \dialog[B0]{
             但是连一个像样的信号都没收到，答辩咱能说啥呢？
         }
         \dialog[B1]{
-            给评委们谈谈背景，谈谈理想，谈谈愿景嘛。\direction{装模作样起来}咳咳，「我们的设备虽然没收到可识读的信号，但这只是暂时的技术性调整，我们的项目仍然前景远大、前途光明，背后是对未知的探索、对未来的憧憬，承载了我们最初……」
+            给评委们谈谈背景，谈谈理想，谈谈愿景嘛。\direction{装模作样起来}咳咳，「我们的设备虽然没收到可识读的信号，但这只是暂时的技术性调整，我们的项目仍然前景远大、前途光明，背后是……」
         }
         \dialog[AC]{
             \direction{打断} 你打住！\direction{笑} 说起来，咱们这个项目最初是要干啥来着？
         }
         \dialog[B0]{
-            最初你是说要做一个通信终端，然后几百块的报销额度只能做一端，所以就只做了一个接收端。
+            最初你说要做一个通信终端，然后几百块的报销额度只能做一端，所以就只做了一个接收端。
         }
         \dialog[B1]{
             然后只有接收端就没有办法控制测试信号，所以就只有在天台上看微波背景辐射了。
         }
         \dialog[AC]{
-            但是就我们手上这些东西 \direction{把黑盒盖子打开}，板子是串口不够刚换的，线头是断了又重新焊的，淘宝买的芯片问客服还说测试程序是外包的，又怎么捕获到背景辐射那微小的波动呢？
+            但是就我们手上这些东西 \direction{把黑盒盖子打开}，板子是串口不够刚换的，线头是断了又重新焊的，淘宝买的芯片问客服还说测试程序是外包的，又怎么捕获到那么微小的辐射波动呢？
             \direction{把盖子推回但没有合上，激动而无力}
         }
         \dialog[B0]{
             也确实是，你看 \direction{指着说明书} 这东西，说是说明书，其实就是 datasheet，
-            错误码没解释，示例程序没输出，光给些电压、电流、温度的，
+            错误码没解释，示例程序没输出，
             除了我们用不到的各种 data 就只有 sh……
             \direction{被捂嘴} 但既然我们都到这一步了，还是再试试呗。
         }
         \dialog[B1]{
-            从另一个角度想，需要我们去解决的问题不也没多少嘛。\direction{推开盖子，开始检查} 反正也就这些接线、程序、电源、天线是我们能控制的。看到一点比现在的噪声大的波动，我们就算成功了。
+            从另一个角度想，我们要解决的问题不也没多少嘛。\direction{推开盖子，开始检查} 反正也就这些接线、程序、电源、天线是我们能控制的。看到一点比现在的噪声大的波动，我们就算成功了。
         }
         \stage{
             B1 一个接一个地检查着线头，B0 见状也翻看起程序，AC 颓丧地坐在一旁，看着他们，又看向远方。
@@ -642,13 +639,13 @@
             这监视器怎么回事？是哪里的工频信号进来了吗？
         }
         \dialog[B0]{
-            这个波……反正不是预期，还是哪里有问题。要不还是老办法Reset一下？
+            这个波……反正不是预期。还是哪有问题，要不还是老办法，Reset一下？
         }
         \stage{
             B0 正要伸手去按 Mega 板的 Reset 键，AC 突然（有些激动地）拦住了他。
         }
         \dialog[AC]{
-            \direction{激动} 不！不要！这个波……先让它把收到的数据记着！如果我没猜错的话，马上，你们马上就知道我在说什么了！
+            \direction{激动} 不要！这个波……先让它把收到的数据记着！如果我没猜错的话，马上，你们马上就知道我在说什么了！
         }
         \stage{
             （在激昂的BGM下）AC 快速敲起代码，凭着印象中当年的编码方式复现出了一个解码程序。绘图仪中的图像慢慢平缓下来，突然出现的信号消失了，只剩下噪声起起伏伏。
@@ -666,7 +663,8 @@
             AC 也有些激动，但又有些迷茫，屏幕上的汉字让他不得不相信，当年的信号不知为何有了回波。
         }
         \dialog[AC]{
-            \direction{仿佛在自言自语} 这是……这是当年的编码…… \direction{缓过神来} 几年前，我在学校操场上，就是用这种编码方式，把这首诗发到天上去的。
+            \direction{仿佛在自言自语} 这是……这是之前的编码…… \direction{缓过神来} 
+            我高中的时候，就用这种编码方式，把这首诗发到天上去过。
         }
         \dialog[B1]{
             等等等等，这首诗？几年前？发到天上？\direction{大为震撼}
@@ -678,13 +676,13 @@
             这真的不是只有在科幻 DV 剧里才会出现的情节吗？
         }
         \dialog[AC]{
-            \direction{难以置信} 我也不知道，但这个信号，这个回波，确确实实就在这里。要是没有它，我之前都一直不敢确定，我当年的那个想法，到底是不是真的实现了。
+            \direction{难以置信} 我也不知道，但这个信号，它确确实实就在这里。其实，我之前都一直不敢确定，我当年的那个想法，到底是不是真的实现了。
         }
         \stage{
-            AC 解释着自己的难以置信却又铁证如山的想法，感觉到了当年的那份探索热情。冥冥之中，似乎确实有什么东西在等待着他。这种意义感让他重新振作起来。
+            AC 解释着自己的难以置信却又铁证如山的想法，感觉到了当年的那份探索热情。冥冥之中，似乎确实有什么东西在等待着她。这种意义感让她重新燃起了对这个项目的热情，她不由自主得想要发个朋友圈。
         }
         \dialog[B0]{
-            \direction{打断 AC 的浮想联翩} 快开工吧，这至少说明我们电路没有问题了。至于这个特殊的信号从哪里来，我们以后再研究嘛。 
+            \direction{打断} 快开工吧，这至少说明我们电路没有问题了。至于这个特殊的信号从哪里来，我们以后再研究嘛。 
         }
         \dialog[AC]{
             \direction{点头} 嗯，对，对。 \direction{开始调试电路}
@@ -698,7 +696,13 @@
             时隔几天，AC 和 B0、B1 三人在会议室里，向老师们汇报了他们的硬件设计成果。这一段时间，他们不断地调试、改进，终于实现了一个稳定的通信终端，取得了理想的成绩。
         }
         \stage{
-            【本段以闪过汇报片段的方式呈现】
+            本段以闪过汇报片段的方式呈现：
+            \begin{itemize}
+                \item 三人捧着自己的通信终端，向评委们展示。
+                \item 评委席上的评委向三人提问。（侧脸）
+                \item 三人鞠躬，向评委们致谢。
+                \item 三人端起作品和奖状自拍庆祝。
+            \end{itemize}
         }
         \dialog[评委1（画外音）]{
             你们的设计思路很独特，实现的效果也很好。
